--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
     <!--External Styles-->
     <link rel="stylesheet" href="styles/style.css" />
     <title>Pearl Jam</title>
+    <!--fontawesome-->
+    <script
+      src="https://kit.fontawesome.com/1cb2397d0b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main>
       <header>
         <!--HEADER AND NAVBAR-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"
               ><img src="img/navbrand.png" alt="PearlJam_Brand"
             /></a>
             <button
-              class="navbar-toggler"
+              class="navbar-toggler bg-light"
               type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent"
@@ -41,16 +46,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a
+                    class="nav-link active text-light"
+                    aria-current="page"
+                    href="#"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Galery</a>
+                  <a class="nav-link text-light" href="#">Galery</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle"
+                    class="nav-link dropdown-toggle text-light"
                     href="#"
                     id="navbarDropdown"
                     role="button"
@@ -67,7 +75,7 @@
                 </li>
                 <li class="nav-item">
                   <a
-                    class="nav-link"
+                    class="nav-link text-light"
                     href="#"
                     tabindex="-1"
                     aria-disabled="true"
@@ -82,7 +90,7 @@
                   placeholder="Search"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-dark" type="submit">
+                <button class="btn btn-outline-light" type="submit">
                   Search
                 </button>
               </form>
@@ -119,108 +127,111 @@
           </div>
         </div>
       </section>
-      <hr />
-      <!--TOUR CAROUSEL-->
-      <section class="container" id="galery">
-        <!-- Carousel -->
-        <div
-          id="galery_carousel"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <!-- Indicators/dots -->
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#galery_carousel"
-              data-bs-slide-to="0"
-              class="active"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#galery_carousel"
-              data-bs-slide-to="1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#galery_carousel"
-              data-bs-slide-to="2"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#galery_carousel"
-              data-bs-slide-to="3"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#galery_carousel"
-              data-bs-slide-to="4"
-            ></button>
-          </div>
 
-          <!-- The slideshow/carousel -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="img/pearljam_galery_1.jpg"
-                alt="Pearl Jam Galery 1"
-                class="d-block"
-                style="width: 100%"
-              />
+      <!--GALERY CAROUSEL-->
+      <section class="container-fluid" id="galery">
+        <div class="container">
+          <!-- Carousel -->
+          <div
+            id="galery_carousel"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#galery_carousel"
+                data-bs-slide-to="0"
+                class="active"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#galery_carousel"
+                data-bs-slide-to="1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#galery_carousel"
+                data-bs-slide-to="2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#galery_carousel"
+                data-bs-slide-to="3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#galery_carousel"
+                data-bs-slide-to="4"
+              ></button>
             </div>
-            <div class="carousel-item">
-              <img
-                src="img/pearljam_galery_2.jpg"
-                alt="Pearl Jam Galery 2"
-                class="d-block"
-                style="width: 100%"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/pearljam_galery_3.jpg"
-                alt="Pearl Jam Galery 3"
-                class="d-block"
-                style="width: 100%"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/pearljam_galery_4.jpg"
-                alt="Pearl Jam Galery 4"
-                class="d-block"
-                style="width: 100%"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/pearljam_galery_5.jpg"
-                alt="Pearl Jam Galery 5"
-                class="d-block"
-                style="width: 100%"
-              />
-            </div>
-          </div>
 
-          <!-- Left and right controls/icons -->
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#galery_carousel"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon"></span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#galery_carousel"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon"></span>
-          </button>
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="img/pearljam_galery_1.jpg"
+                  alt="Pearl Jam Galery 1"
+                  class="d-block"
+                  style="width: 100%"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/pearljam_galery_2.jpg"
+                  alt="Pearl Jam Galery 2"
+                  class="d-block"
+                  style="width: 100%"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/pearljam_galery_3.jpg"
+                  alt="Pearl Jam Galery 3"
+                  class="d-block"
+                  style="width: 100%"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/pearljam_galery_4.jpg"
+                  alt="Pearl Jam Galery 4"
+                  class="d-block"
+                  style="width: 100%"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/pearljam_galery_5.jpg"
+                  alt="Pearl Jam Galery 5"
+                  class="d-block"
+                  style="width: 100%"
+                />
+              </div>
+            </div>
+
+            <!-- Left and right controls/icons -->
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#galery_carousel"
+              data-bs-slide="prev"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#galery_carousel"
+              data-bs-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
         </div>
       </section>
+      <!--Tours-->
       <section class="container-fluid" id="tours">
         <div class="row">
           <h2>2024 Tour</h2>
@@ -262,6 +273,148 @@
                 src="img/pearl-jam-tour-sydney.jpg"
                 alt="Pearl Jam Sydney Concert"
             /></a>
+          </div>
+        </div>
+        <!--Offcanvas sidebar-->
+        <div class="row">
+          <div class="offcanvas offcanvas-end" id="all-concerts">
+            <div class="offcanvas-header">
+              <h1 class="offcanvas-title">2024 Tour</h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="offcanvas"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <table class="table table-dark table-hover">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Local</th>
+                    <th>Tickets</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>9 Set</td>
+                    <td>Wells Fargo Center, Philadelphia, EUA</td>
+                    <td>
+                      <a
+                        href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074939?quantity=2"
+                        class="btn btn-secondary"
+                        type="button"
+                      >
+                        Buy Ticket
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>12 Set</td>
+                    <td>CFG Bank Arena, Baltimore, EUA</td>
+                    <td>
+                      <a
+                        href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074739"
+                        class="btn btn-secondary"
+                        type="button"
+                      >
+                        Buy Ticket
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>15 Set</td>
+                    <td>Fenway Park, Boston, EUA</td>
+                    <td>
+                      <a
+                        href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074591?quantity=2"
+                        class="btn btn-secondary"
+                        type="button"
+                      >
+                        Buy Ticket
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>17 Set</td>
+                    <td>Fenway Park, Boston, EUA</td>
+                    <td>
+                      <a
+                        href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074999?quantity=2"
+                        class="btn btn-secondary"
+                        type="button"
+                      >
+                        Buy Ticket
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>27 Set</td>
+                    <td>Doheny State Beach, Dana Point, EUA</td>
+                    <td>
+                      <a
+                        href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-152969449?quantity=2"
+                        class="btn btn-secondary"
+                        type="button"
+                      >
+                        Buy Ticket
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>8 Nov</td>
+                    <td>
+                      Go Media Stadium (Mt Smart Stadium), Penrose, Aukland,
+                      Nova Zelândia
+                    </td>
+                    <td>
+                      <a
+                        href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153087668?quantity=2"
+                        class="btn btn-secondary"
+                        type="button"
+                      >
+                        Buy Ticket
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <button
+            class="btn btn-secondary"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#all-concerts"
+            id="concerts-btn"
+          >
+            See All Concerts
+          </button>
+        </div>
+      </section>
+      <!--Contact-->
+      <section class="container-fluid" id="contact">
+        <div class="row">
+          <h2>Contacts</h2>
+          <p>Introduce yourself to Pearl Jam!</p>
+        </div>
+        <div class="row">
+          <div class="col-6 contact-info">
+            <p><i class="fas fa-location-pin"></i> Abingdon, Oxfordshire</p>
+            <p><i class="fas fa-phone"></i> +44 254 268 684</p>
+            <p><i class="fas fa-envelope"></i> pearlJam@gmail.com</p>
+          </div>
+          <div class="col-6 msgform">
+            <form action="#" method="post">
+              <input id="name" name="name " type="text" placeholder="Name" />
+              <input id="email" name="email" type="email" placeholder="Email" />
+              <textarea
+                name="mensagem"
+                id="textmsg"
+                placeholder="Escreve aqui a tua mensagem"
+              ></textarea>
+              <input id="enviar" type="submit" value="Enviar" />
+            </form>
           </div>
         </div>
       </section>
