--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Pearl Jam Web Page" />
     <meta name="author" content="Fábio Ceriaco" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="icon" href="img/logo.jpg" />
+    <link rel="icon" href="img/logo.jpg" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -303,7 +303,6 @@
                       <a
                         href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074939?quantity=2"
                         class="btn btn-secondary"
-                        type="button"
                       >
                         Buy Ticket
                       </a>
@@ -316,7 +315,6 @@
                       <a
                         href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074739"
                         class="btn btn-secondary"
-                        type="button"
                       >
                         Buy Ticket
                       </a>
@@ -329,7 +327,6 @@
                       <a
                         href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074591?quantity=2"
                         class="btn btn-secondary"
-                        type="button"
                       >
                         Buy Ticket
                       </a>
@@ -342,7 +339,6 @@
                       <a
                         href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153074999?quantity=2"
                         class="btn btn-secondary"
-                        type="button"
                       >
                         Buy Ticket
                       </a>
@@ -355,7 +351,6 @@
                       <a
                         href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-152969449?quantity=2"
                         class="btn btn-secondary"
-                        type="button"
                       >
                         Buy Ticket
                       </a>
@@ -371,7 +366,6 @@
                       <a
                         href="https://www.viagogo.pt/Bilhetes-Concertos/Alternativa-e-Indie/Pearl-Jam-Bilhetes/E-153087668?quantity=2"
                         class="btn btn-secondary"
-                        type="button"
                       >
                         Buy Ticket
                       </a>
